tests/bad_programs/semantic_errors/while_string.notc
int main() {
    string s = "eh";
    while (s) {
    }
    return 0;
}
